--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,53 @@ body {
   background-color: #333;
   color: #fff;
 }
+.taskBg {
+  background-color: #555;
+  border-radius: 4px;
+  margin-bottom: 10px;
+
+  padding: 6px 140px 10px 15px;
+  text-align: center;
+  font-size: 17px;
+  position: relative;
+}
+.taskNumber {
+  color: #999;
+  border: 1px solid #999;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  text-align: center;
+  font-size: 10px;
+  margin-right: 8px;
+  align-items: center;
+  justify-content: center;
+}
+.taskBg div {
+  display: flex;
+  align-items: center;
+}
+.taskBg .done .taskText {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+.taskBg .iconsWrap {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 15px;
+  width: auto;
+  display: inline-block;
+}
+
+.taskBg .iconsWrap span {
+  display: inline-block;
+  margin: 0px 5px 0 10px;
+  cursor: pointer;
+  color: #00ff89;
+}
+
+.taskBg .iconsWrap span:hover {
+  color: white;
+}
